Fix: Absolute positioning and z-index

--- a/src/styles/datepicker.css
+++ b/src/styles/datepicker.css
@@ -20,6 +20,7 @@ div.easy-dates-picker {
 
 .datepicker-calendar-container {
   position: absolute;
+  z-index: 100;
   padding: 10px;
   margin-top: 1px;
   width: 275px;
